# cxx-clang

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  README.md  rustfmt.toml
crates/cxx-clang/: Cargo.toml  build.rs
crates/cxx-clang-abi/: Cargo.toml  build.rs
crates/cxx-clang-abi/abi/clang/ast/: ast_context.json  decl.json  named_decl.json  type_.json
crates/cxx-clang-abi/abi/clang/ast/decl/: access_spec_decl.json  base_using_decl.json  binding_decl.json  block_decl.json  builtin_template_decl.json  captured_decl.json  class_scope_function_specialization_decl.json  class_template_decl.json  class_template_partial_specialization_decl.json  class_template_specialization_decl.json  concept_decl.json  constructor_using_shadow_decl.json  cxx_constructor_decl.json  cxx_conversion_decl.json  cxx_deduction_guide_decl.json  cxx_destructor_decl.json  cxx_method_decl.json  cxx_record_decl.json  decl_context.json  declarator_decl.json  decomposition_decl.json  empty_decl.json  enum_constant_decl.json  enum_decl.json  export_decl.json  extern_c_context_decl.json  field_decl.json  file_scope_asm_decl.json  friend_decl.json  friend_template_decl.json  function_decl.json  function_template_decl.json  implicit_param_decl.json  import_decl.json  indirect_field_decl.json  label_decl.json  lifetime_extended_temporary_decl.json  linkage_spec_decl.json  ms_guid_decl.json  ms_property_decl.json  (+61 more)
crates/cxx-clang-abi/abi/clang/basic/: module.json
crates/cxx-clang-abi/abi/clang/lex/: macro_info.json
crates/cxx-clang-abi/abi/clang/lex/macro_info/: module_macro.json
crates/cxx-clang-abi/cxx/include/: cxx-clang-abi.hxx
crates/cxx-clang-abi/cxx/include/clang/AST/: ASTContext.hxx  Decl.hxx  NamedDecl.hxx  Type.hxx
crates/cxx-clang-abi/cxx/include/clang/AST/Decl/: AccessSpecDecl.hxx  BaseUsingDecl.hxx  BindingDecl.hxx  BlockDecl.hxx  BuiltinTemplateDecl.hxx  CXXConstructorDecl.hxx  CXXConversionDecl.hxx  CXXDeductionGuideDecl.hxx  CXXDestructorDecl.hxx  CXXMethodDecl.hxx  CXXRecordDecl.hxx  CapturedDecl.hxx  ClassScopeFunctionSpecializationDecl.hxx  ClassTemplateDecl.hxx  ClassTemplatePartialSpecializationDecl.hxx  ClassTemplateSpecializationDecl.hxx  ConceptDecl.hxx  ConstructorUsingShadowDecl.hxx  DeclContext.hxx  DeclaratorDecl.hxx  DecompositionDecl.hxx  EmptyDecl.hxx  EnumConstantDecl.hxx  EnumDecl.hxx  ExportDecl.hxx  ExternCContextDecl.hxx  FieldDecl.hxx  FileScopeAsmDecl.hxx  FriendDecl.hxx  FriendTemplateDecl.hxx  FunctionDecl.hxx  FunctionTemplateDecl.hxx  ImplicitParamDecl.hxx  ImportDecl.hxx  IndirectFieldDecl.hxx  LabelDecl.hxx  LifetimeExtendedTemporaryDecl.hxx  LinkageSpecDecl.hxx  MSGuidDecl.hxx  MSPropertyDecl.hxx  (+57 more)
crates/cxx-clang-abi/cxx/include/clang/Basic/: Module.hxx
crates/cxx-clang-abi/cxx/include/clang/Lex/: MacroInfo.hxx
crates/cxx-clang-abi/cxx/include/clang/Lex/MacroInfo/: ModuleMacro.hxx
crates/cxx-clang-abi/cxx/lib/: cmake.cxx
crates/cxx-clang-abi/src/: abi.rs
crates/cxx-clang-abi/src/abi/: clang.rs
crates/cxx-clang-abi/src/abi/clang/: ast.rs  basic.rs  lex.rs
crates/cxx-clang-abi/src/abi/clang/ast/: ast_context.rs  decl.rs  named_decl.rs  type_decl.rs  typedef_decl.rs  typedef_name_decl.rs
crates/cxx-clang-abi/src/abi/clang/ast/decl/: access_spec_decl.rs  base_using_decl.rs  binding_decl.rs  block_decl.rs  builtin_template_decl.rs  captured_decl.rs  class_scope_function_specialization_decl.rs  class_template_decl.rs  class_template_partial_specialization_decl.rs  class_template_specialization_decl.rs  concept_decl.rs  constructor_using_shadow_decl.rs  cxx_constructor_decl.rs  cxx_conversion_decl.rs  cxx_deduction_guide_decl.rs  cxx_destructor_decl.rs  cxx_method_decl.rs  enum_decl.rs  (+85 more)
crates/cxx-clang-abi/src/abi/clang/basic/: module.rs
crates/cxx-clang-abi/src/abi/clang/lex/: macro_info.rs
crates/cxx-clang-auto/: Cargo.toml  build.rs
crates/cxx-clang-auto/auto/clang/ast/: ast_context.json  decl.json  type_.json
crates/cxx-clang-auto/auto/clang/ast/decl/: access_spec_decl.json  base_using_decl.json  binding_decl.json  block_decl.json  builtin_template_decl.json  captured_decl.json  class_scope_function_specialization_decl.json  class_template_decl.json  class_template_partial_specialization_decl.json  class_template_specialization_decl.json  concept_decl.json  constructor_using_shadow_decl.json  cxx_constructor_decl.json  cxx_conversion_decl.json  cxx_deduction_guide_decl.json  cxx_destructor_decl.json  cxx_method_decl.json  cxx_record_decl.json  decl_context.json  declarator_decl.json  decomposition_decl.json  empty_decl.json  enum_constant_decl.json  enum_decl.json  export_decl.json  extern_c_context_decl.json  field_decl.json  file_scope_asm_decl.json  friend_decl.json  friend_template_decl.json  function_decl.json  function_template_decl.json  implicit_param_decl.json  import_decl.json  indirect_field_decl.json  label_decl.json  lifetime_extended_temporary_decl.json  linkage_spec_decl.json  ms_guid_decl.json  ms_property_decl.json  (+57 more)
crates/cxx-clang-auto/auto/clang/basic/: module.json
crates/cxx-clang-auto/auto/clang/lex/: macro_info.json
crates/cxx-clang-auto/auto/clang/lex/macro_info/: module_macro.json
crates/cxx-clang-auto/cxx/include/: cxx-clang-auto.hxx
crates/cxx-clang-auto/cxx/include/clang/AST/: ASTContext.hxx  Decl.hxx  Type.hxx
crates/cxx-clang-auto/cxx/include/clang/Basic/: Module.hxx
crates/cxx-clang-auto/cxx/include/clang/Lex/: MacroInfo.hxx
crates/cxx-clang-auto/cxx/lib/: cmake.cxx
crates/cxx-clang-auto/src/: auto.rs  lib.rs
crates/cxx-clang-build/: Cargo.toml
crates/cxx-clang-build/src/: lib.rs
crates/cxx-clang/src/: abi.rs  lib.rs
crates/cxx-clang/src/abi/: clang.rs
crates/cxx-clang/src/abi/clang/: ast.rs  basic.rs  lex.rs
crates/cxx-clang/src/abi/clang/ast/: ast_context.rs  decl.rs  named_decl.rs
crates/cxx-clang/src/abi/clang/basic/: module.rs
crates/cxx-clang/src/abi/clang/lex/: macro_info.rs
crates/cxx-clang/src/ffi/clang/ast/: ast_context.rs  decl.rs  named_decl.rs
crates/cxx-clang/src/ffi/clang/basic/: module.rs
crates/cxx-clang/src/ffi/clang/lex/: macro_info.rs
(+307 files in other folders)
