[workspace]
resolver = "2"

members = [
  "crates/cxx-clang",
  "crates/cxx-clang-auto",
  "crates/cxx-clang-build",
]

# [patch.crates-io]
# cxx-auto = { path = "../../../cxx-auto" }
# cxx-llvm = { path = "../../../cxx-llvm/crates/cxx-llvm" }
# cxx-llvm-auto = { path = "../../../cxx-llvm/crates/cxx-llvm-auto" }
# cxx-llvm-build = { path = "../../../cxx-llvm/crates/cxx-llvm-build" }
# cxx-llvm-build-common = { path = "../../../cxx-llvm/crates/cxx-llvm-build-common" }
# moveref = { path = "../../../moveref" }
