[package]
edition = "2021"
name = "cxx-clang-build"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-clang"

[dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
cxx-llvm-build = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
cxx-llvm-build-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
normpath = "1.1"
