[package]
edition = "2021"
name = "cxx-clang-build"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-clang"
description = "Common build code for cxx-clang"

[dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
cxx-llvm-build = "0.0"
cxx-llvm-build-common = "0.0"
normpath = "1.1"
