[package]
edition = "2021"
name = "cxx-clang"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-clang"

[features]
debug = ["tracing"]

[build-dependencies]
cxx-llvm-common = { version = "0.0", path = "../../../cxx-llvm-common" }
cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-llvm = { version = "0.0", path = "../../../cxx-llvm/crates/cxx-llvm" }
cxx-memory = { version = "0.0", path = "../../../cxx-memory/crates/cxx-memory" }
cxx-memory-abi = { version = "0.0", path = "../../../cxx-memory/crates/cxx-memory-abi" }
cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
static_assertions = "1.1"
