[package]
edition = "2021"
name = "cxx-clang"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/cxx-clang"

[features]
debug = ["tracing"]

[build-dependencies]
cxx-clang-auto = { version = "0.0", path = "../cxx-clang-auto" }
cxx-clang-build = { version = "0.0", path = "../cxx-clang-build" }
cxx-llvm-build = "0.0"
cxx-llvm-build-common = "0.0"

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
cxx-auto = "0.0"
cxx-clang-auto = { version = "0.0", path = "../cxx-clang-auto" }
cxx-llvm = "0.0"
cxx-llvm-auto = "0.0"
moveref = "0.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
static_assertions = "1.1"
